[gd_scene load_steps=4 format=3 uid="uid://dcoufqerb7rwo"]

[ext_resource type="Script" path="res://scenes/open.gd" id="1_xxc3s"]
[ext_resource type="Script" path="res://scenes/process_folder.gd" id="2_6bdkt"]
[ext_resource type="Script" path="res://scenes/sort_button.gd" id="3_ref1t"]

[node name="Pixel over export" type="Node2D"]

[node name="FolderList" type="ItemList" parent="."]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 47.0
offset_right = 262.0
offset_bottom = 605.0

[node name="FilesList" type="ItemList" parent="."]
unique_name_in_owner = true
offset_left = 299.0
offset_top = 44.0
offset_right = 646.0
offset_bottom = 602.0

[node name="Label" type="Label" parent="."]
offset_left = 79.0
offset_top = 611.0
offset_right = 206.0
offset_bottom = 634.0
text = "Children Folders"

[node name="OpenButton" type="Button" parent="."]
offset_left = 948.0
offset_top = 30.0
offset_right = 1086.0
offset_bottom = 76.0
text = "OPEN FOLDER"

[node name="Open" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
size = Vector2i(800, 550)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2

[node name="Code" type="Node" parent="."]

[node name="Open" type="Node" parent="Code"]
script = ExtResource("1_xxc3s")

[node name="ProcessFolder" type="Node" parent="Code/Open"]
unique_name_in_owner = true
script = ExtResource("2_6bdkt")

[node name="SortButton" type="Node" parent="Code"]
script = ExtResource("3_ref1t")

[node name="Label2" type="Label" parent="."]
offset_left = 393.0
offset_top = 608.0
offset_right = 546.0
offset_bottom = 639.0
text = "Files they contain"

[node name="FolderName" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = 712.0
offset_top = 164.0
offset_right = 915.0
offset_bottom = 201.0

[node name="Label3" type="Label" parent="."]
offset_left = 934.0
offset_top = 168.0
offset_right = 974.0
offset_bottom = 191.0
text = "Export folder name"

[node name="TypeOption" type="OptionButton" parent="."]
offset_left = 797.0
offset_top = 282.0
offset_right = 1004.0
offset_bottom = 323.0
selected = 0
item_count = 4
popup/item_0/text = "No name template"
popup/item_1/text = "4 direction names"
popup/item_1/id = 1
popup/item_2/text = "8 directions names"
popup/item_2/id = 2
popup/item_3/text = "Mugen names"
popup/item_3/id = 3

[node name="Label4" type="Label" parent="."]
offset_left = 732.0
offset_top = 211.0
offset_right = 1103.0
offset_bottom = 260.0
text = "The exported folder will be another subfolder of
the folder you opened"

[node name="Sort" type="Button" parent="."]
offset_left = 838.0
offset_top = 370.0
offset_right = 971.0
offset_bottom = 412.0
text = "SORT FILES"

[node name="Log" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 28.0
offset_top = 9.0
offset_right = 640.0
offset_bottom = 32.0

[node name="Skip" type="SpinBox" parent="."]
unique_name_in_owner = true
offset_left = 817.0
offset_top = 447.0
offset_right = 900.062
offset_bottom = 478.0
max_value = 10.0

[node name="Label5" type="Label" parent="."]
offset_left = 933.0
offset_top = 450.0
offset_right = 1037.0
offset_bottom = 473.0
text = "Skip intervals"

[connection signal="item_selected" from="FolderList" to="Code/Open/ProcessFolder" method="_on_folder_list_item_selected"]
[connection signal="pressed" from="OpenButton" to="Code/Open" method="_on_open_button_pressed"]
[connection signal="dir_selected" from="Open" to="Code/Open" method="_on_open_dir_selected"]
[connection signal="focus_exited" from="FolderName" to="Code/SortButton" method="_on_folder_name_focus_exited"]
[connection signal="text_changed" from="FolderName" to="Code/SortButton" method="_on_folder_name_text_changed"]
[connection signal="text_submitted" from="FolderName" to="Code/SortButton" method="_on_folder_name_text_submitted"]
[connection signal="item_selected" from="TypeOption" to="Code/SortButton" method="_on_type_option_item_selected"]
[connection signal="pressed" from="Sort" to="Code/SortButton" method="_on_sort_pressed"]
